Issue #2: containers for profile and board

--- a/web-app/app/www/index.html
+++ b/web-app/app/www/index.html
@@ -19,8 +19,8 @@
 
 </head>
 <body>
-	<div id="wrap">
-	</div>
+	<div id="user-profile"></div>
+	<div id="board-container"></div>
   <script data-main="js/trollboard-app" src="js/vendor/require-2.1.1.js"></script>
 </body>
 </html>
