--- a/web-app/app/www/index.html
+++ b/web-app/app/www/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
 	<div id="user-profile"></div>
+	<div id="projects-container">
+    <div id="my-projects"></div>
+    <div id="org-projects"></div>
+	</div>
 	<div id="board-container"></div>
   <script data-main="js/trollboard-app" src="js/vendor/require-2.1.1.js"></script>
 </body>
