--- a/web-app/app/www/index.html
+++ b/web-app/app/www/index.html
@@ -54,7 +54,7 @@
       <div id="user-profile"></div>
       <div id="projects-container">
         <div id="my-projects"></div>
-        <div id="org-projects"></div>
+        <div id="my-organizations"></div>
       </div>
       <div id="board-container"></div>
     </div>
